--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "easynotereader",
+  "homepage": "https://github.com/davidacm/enr",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +8,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "build-report": "vue-cli-service build --report",
-    "deploy": "node scripts/gh-pages-deploy.js"
+    "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
@@ -21,7 +22,6 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "execa": "latest",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "^4.5.15",
@@ -30,6 +30,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-gh-pages": "^1.19.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
